# image_manipulations_with_CV

./: .gitignore  README.md  logbook.txt  main.py  manipulations.py  optimization.ipynb  pipeline.yaml  playground.ipynb  pyproject.toml  rotate_polygon.ipynb
core/: image_io.py  utils.py  visualization.py
experiments/: compare_ops.py  sanity_checks.py
ops/: blur.py  crop.py  flip.py  grid_shuffle.py  invert_colors.py  padding.py  resize_nn.py  rotate.py
src/: PipelineRunner.py  image_io.py  main.py  manipulations.py  utils.py
